[package]
name = "potage"
version = "0.1.0"
authors = ["Hiromitsu Oshiba <0x75960@promptitu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
tokio = {version = "0.2", features=["fs", "macros"]}
